--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "clsx": "^2.0.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.69.4",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^14.0.1",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "install": "^0.13.0",
+    "npm": "^10.2.3",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwind-scrollbar": "^3.0.5"
   }
 }
